--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -54,7 +54,7 @@
             <div class="row">
               
               <div class="col-md-4">
-                <a href="index.html"><h1>municiplanner</h1></a>
+                <a href="/"><h1>municiplanner</h1></a>
               </div>
 
               <div class="col-md-8">
